<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Gene_Fragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <Button android:id="@+id/accept_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/accept"
            android:layout_alignParentBottom="true" />
        <Button android:id="@+id/cancel_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/cancel"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/accept_button" />
        <ScrollView android:id="@+id/ScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/cancel_button">
            <RelativeLayout android:id="@+id/RelativeLayout"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
                <EditText android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:singleLine="true"
                    android:typeface="monospace"
                    android:hint="@string/hint_generated_password" />
                <Button android:id="@+id/generate_password_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password"
                    android:text="@string/generate_password" />
                <TextView android:id="@+id/length_label"
                    android:text="@string/length"
                    android:layout_height="fill_parent"
                    android:layout_width="fill_parent"
                    android:layout_below="@id/generate_password_button" />
                <Button android:id="@+id/btn_length16"
                    android:text="@string/generate_16"
                    android:layout_alignParentRight="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:minWidth="60dp"
                    android:layout_below="@id/length_label" />
                <Button android:id="@+id/btn_length12"
                    android:text="@string/generate_12"
                    android:layout_toLeftOf="@id/btn_length16"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:minWidth="60dp"
                    android:layout_alignTop="@id/btn_length16" />
                <Button android:id="@+id/btn_length8"
                    android:text="@string/generate_8"
                    android:layout_toLeftOf="@id/btn_length12"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:minWidth="60dp"
                    android:layout_alignTop="@id/btn_length16" />
                <Button android:id="@+id/btn_length6"
                    android:text="@string/generate_6"
                    android:layout_toLeftOf="@id/btn_length8"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:minWidth="60dp"
                    android:layout_alignTop="@id/btn_length16" />
                <EditText android:id="@+id/length"
                    android:layout_width="fill_parent"
                    android:layout_toLeftOf="@id/btn_length6"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/btn_length16"
                    android:singleLine="true"
                    android:inputType="number"
                    android:text="@string/generate_8"
                    android:hint="length"/>
                <CheckBox android:id="@+id/cb_uppercase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="uppercase"
                    android:checked="true"
                    android:layout_below="@id/length" />
                <CheckBox android:id="@+id/cb_lowercase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="lowercase"
                    android:checked="true"
                    android:layout_below="@id/cb_uppercase" />
                <CheckBox android:id="@+id/cb_digits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="digits"
                    android:checked="true"
                    android:layout_below="@id/cb_lowercase" />
                <CheckBox android:id="@+id/cb_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="minus"
                    android:layout_below="@id/cb_digits" />
                <CheckBox android:id="@+id/cb_underline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="underline"
                    android:layout_below="@id/cb_minus" />
                <CheckBox android:id="@+id/cb_space"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="space"
                    android:layout_below="@id/cb_underline" />
                <CheckBox android:id="@+id/cb_specials"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="special"
                    android:layout_below="@id/cb_space" />
                <CheckBox android:id="@+id/cb_brackets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="brackets"
                    android:layout_below="@id/cb_specials" />
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>